# CMAKE Version
CMAKE_MINIMUM_REQUIRED(VERSION 3.9)

# Project
SET(PATCH_VERSION "1" CACHE INTERNAL "Patch version")
SET(PROJECT_VESRION 0.0.${PATCH_VERSION})
SET(PROJECT_NAME "bulk" CACHE STRING "Project name")
PROJECT(${PROJECT_NAME} VERSION ${PROJECT_VESRION})

# Sources
SET ( SOURCES main.cpp  CommandHandler.cpp)

# Headers
SET ( HEADERS CommandHandler.h )

# Executable
ADD_EXECUTABLE(bulk ${SOURCES} ${HEADERS})

# Properties
SET_TARGET_PROPERTIES (
    bulk
        PROPERTIES
            CMAKE_CXX_STANDARD 14
            CMAKE_CXX_STANDARD_REQUIRED ON
)

# Include Path

# Linking

# Compiler options

# Package
SET(CPACK_GENERATOR "DEB")
SET(CPACK_PACKAGE_VERSION_MAJOR "${PROJECT_VERSION_MAJOR}")
SET(CPACK_PACKAGE_VERSION_MINOR "${PROJECT_VERSION_MINOR}")
SET(CPACK_PACKAGE_VERSION_PATCH "${PROJECT_VERSION_PATCH}")
SET(CPACK_PACKAGE_VERSION "${CPACK_PACKAGE_VERSION_MAJOR}.${CPACK_PACKAGE_VERSION_MINOR}.${CPACK_PACKAGE_VERSION_PATCH}")
SET(CPACK_DEBIAN_PACKAGE_MAINTAINER "mycompany@gmail.com")
INCLUDE(CPack)

# UNIT tests